Bug 1160635 patch 2 - Stop making image resizing optimization when image has percent width or height.  r=dholbert

The reftests pass with the patch, based on local testing.